fix logic around table being visible on screen, adjust scrollbar handle

--- a/styleguide/source/assets/scss/01-atoms/_table.scss
+++ b/styleguide/source/assets/scss/01-atoms/_table.scss
@@ -216,16 +216,17 @@
 .ma__scroll-indicator {
     position: relative;
     width:100%;
-    height: 14px;
+    height: 8px;
     border: 2px solid #14558f;
-    overflow: hidden;
+    overflow: visible;
     opacity: 0.5;
 
     .ma__scroll-indicator__button {
         position: absolute;
-        height: calc(100% - 4px);
-        top: 2px;
+        height: calc(100% + 8px);
+        top: -4px;
         background: #14558f;
-        opacity: 0.5;
+        opacity: 1;
+        cursor: grab;
     }
 }
